Fixed resizing overlap issue

--- a/src/index.css
+++ b/src/index.css
@@ -79,10 +79,7 @@ body {
 }
 #hero {
     height: auto;
-    min-height: 100vh;
     background-color: black;
-    background-repeat:no-repeat;
-    background-size: cover;
     color: white;
 }
 .container {
@@ -101,7 +98,7 @@ body {
     max-width: 50%;
     margin-left: auto;
     margin-right: auto;
-    padding-top: 9%;
+    padding: 20% 0;
 }
 h1 {
     font-size: 50px;
@@ -129,6 +126,8 @@ h2 {
     height: auto;
 }
 .heroA {
+    display: inline-block;
+    width: 80px;
     background-color: rgb(0, 0, 0);
     color: rgb(255, 255, 255);
     border-color: white;
@@ -136,9 +135,10 @@ h2 {
     border-style: solid;
     border-width: 1.5px;
     font-size: 15px;
-    padding: 10px;
+    padding: 8px;
     padding-right: 18px;
     padding-left: 18px;
+    text-align: center;
 }
 .heroA:hover {
     background-color: rgb(82, 82, 82);
@@ -177,6 +177,8 @@ h2 {
     max-width: 50%;
 }
 .aboutButton {
+    width: 100px;
+    display: block;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     border-color: black;
@@ -219,7 +221,7 @@ h2 {
 }
 .pack {
     background-color: white;
-    height: 200px;
+    height: auto;
     width: 300px;
     margin: 10px;
     border-radius: 5px;
@@ -228,7 +230,6 @@ h2 {
 .reviewRow {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     align-items: center;
     text-align: center;
 }
@@ -240,6 +241,9 @@ h2 {
     border-radius: 5px;
 }
 .packButton {
+    margin: auto;
+    display: block;
+    width: 50px;
     background-color: rgb(255, 255, 255);
     color: rgb(0, 0, 0);
     border-color: rgb(0, 0, 0);
@@ -364,6 +368,7 @@ input {
         max-width: 95%;
         margin-left: auto;
         margin-right: auto;
+        height: auto;
     }
     .caption{
         max-width: 95%;
